# stare

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
